--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -1,6 +1,6 @@
 FROM quay.io/sampandey001/secktor
-RUN git clone https://github.com/asrher/akidasek /root/asrher
-WORKDIR /root/asrher/
+RUN git clone https://github.com/Raizel-2023/PRABATH_MD /root/prabathLK
+WORKDIR /root/prabathLK/
 RUN npm install npm@latest
 RUN yarn install --network-concurrency 1
 EXPOSE 8000
